Use `string_utils_py` instead of `pyutils`.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
 httpx
-git+https://github.com/vphpersson/pyutils.git#egg=pyutils
+git+https://github.com/vphpersson/string_utils_py.git#egg=string_utils_py
