--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
 httpx
 git+https://github.com/vphpersson/string_utils_py.git#egg=string_utils_py
+git+https://github.com/vphpersson/typed_argument_parser.git#egg=typed_argument_parser
